[gd_scene load_steps=11 format=3 uid="uid://bjeo7btds7rq6"]

[ext_resource type="Texture2D" uid="uid://bny0lf6kalofo" path="res://Assets/Art/missingtexture.png" id="1_dv67g"]
[ext_resource type="Script" path="res://Assets/Code/building.gd" id="1_qeawe"]
[ext_resource type="Texture2D" uid="uid://c3acmgf6rbya1" path="res://Assets/Art/white circle.png" id="2_6nyao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ap14"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wegws"]
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_ar5fb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("highlight areas:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fvmlj"]
resource_name = "flash_red_warning"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jdqwk"]
resource_name = "on_destroy"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.475),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.4, 0.4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.475),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_46lho"]
resource_name = "on_placed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.466667), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 0.105112, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8im4"]
_data = {
"RESET": SubResource("Animation_ar5fb"),
"flash_red_warning": SubResource("Animation_fvmlj"),
"on_destroy": SubResource("Animation_jdqwk"),
"on_placed": SubResource("Animation_46lho")
}

[node name="FunTennisBuilding" type="Node2D"]
script = ExtResource("1_qeawe")

[node name="highlight areas" type="Node2D" parent="."]
z_index = 2

[node name="Sprite2DProxBonus" type="Sprite2D" parent="highlight areas"]
modulate = Color(1, 1, 1, 0.439216)
scale = Vector2(1.55, 1.55)
texture = ExtResource("2_6nyao")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("1_dv67g")

[node name="ProximityBonusArea2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityBonusArea2D"]
shape = SubResource("CircleShape2D_4ap14")

[node name="Area2DBuilding" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DBuilding"]
shape = SubResource("RectangleShape2D_wegws")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8im4")
}

[connection signal="area_entered" from="ProximityBonusArea2D" to="." method="_on_proximity_bonus_area_2d_area_entered"]
[connection signal="area_exited" from="ProximityBonusArea2D" to="." method="_on_proximity_bonus_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2DBuilding" to="." method="_on_area_2d_building_mouse_entered"]
[connection signal="mouse_exited" from="Area2DBuilding" to="." method="_on_area_2d_building_mouse_exited"]
